# memcoder

./: .gitignore  .gitmodules  README.md  TODO.md  memcoder_plan.md  pyproject.toml
artifacts/: README.md
config/: README.md  run_all_repos_easy_eval.sh  run_kilo_routed_vs_static_eval.sh  shine_eval_demo.yaml  shine_marimo.yaml  summarize_kilo_routed_vs_static_eval.sh
dashboard/: README.md  app.py
docs/: README.md  ai_usage.md  evaluation.md  observations.md
eval/: README.md  artifacts.py  compare_plots.py  composition.py  config.py  embedding.py  judge.py  model.py  paths.py  plots.py  report.py  routing.py  runner.py
experiments/: build_flash_attn.sh  pyproject.toml
experiments/doc-to-lora/: chat_templates  demo_cpu.py  demo_gpu.py  demo_gpu_noflash.py  noflash_patches.py
experiments/dyprag/: .gitignore  README.md
experiments/dyprag/exp_0/: NOTES.md
experiments/dyprag/exp_1/: NOTES.md  analyze.py  capability_interference.py  config.py  evaluate.py  generate_patches.py  helpers.py  pilot_ids.txt  prompts.py  run_pilot.py  test_tiny.py  train_oracle.py
experiments/lora-recall/: checkpoint_config.py  chunk_helper.py  diag5_recall_suite.py  diag6_compositional.py  diag7_routing.py  diag_canary.py  diag_checkpoint_eval.py  diag_context_window.py  diag_reset_verify.py  internalize_chunked.py  probes.json  run.sh  run_all.py  run_all.sh  run_experiment.py
experiments/lora-recall/docs/flask_sessions/: variant_a.txt  variant_b.txt
experiments/lora-recall/docs/marshmallow_validate/: variant_a.txt  variant_b.txt
experiments/serving/: README.md  fallback_server.py  serve.sh  setup.sh
old/: README.md
prompts/: README.md  design_doc_generation.md  doc_derived_qa_generation.md  doc_derived_qa_generation_v2.md  ledger_example_question_generation.md  llm_judge_grading_v0.md  topic_discovery.md  (+3 more)
src/: .gitignore  INSTRUCTIONS.md  README.md  pyproject.toml
src/stage-0/: HARDENING.md  NOTES.md  README.md  requirements.lock.txt
src/stage-0/scripts/: build_instances.py  clone_repos.py  common.py  config.py  discover_repos.py  extract_function_candidates.py  finalize_instances.py  function_masking.py  patch_utils.py  plot_contamination.py  prepare_candidate_attempts.py  repo_utils.py  run_stage0.sh  score_test_coverage.py  setup_env.sh  setup_repo_env.py  sync_prebuilt_images.py  verify_gold_pass.py  verify_wipe.py
src/stage-1/: BRIDGE.md  FIX1.md  NOTES.md  README.md
src/stage-1/scripts/: analyze_stage1.py  capability_interference.py  config.py  evaluate_completions.py  generate_completions.py  helpers.py  identifier_overlap.py  init_run_config.py  run_stage1.sh  train_oracle.py
src/stage-1a/: download_checkpoints.sh  inference.ipynb  mysaveload_patched.py  shine_inference.ipynb
src/stage-1a/scripts/: run_stage1a.py  score_stage1a.py  score_stage1a.sh
src/stage-1b/: README.md
src/stage-1b/scripts/: build_stage1b_dataset.py  evaluate_stage1b_full.py  evaluate_stage1b_light.py  run_stage1b.sh  run_stage1b_inference.sh  train_stage1b.sh
(+380 files in other folders)
