[project]
name = "experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "transformers==4.51.3",
    "flash-attn~=2.8.3",
    "peft>=0.18.1",
    "jaxtyping>=0.3.7",
    "datasets>=4.8.4",
    "huggingface-hub>=0.32.0,<1.0",
]

[tool.uv.sources]
flash-attn = { path = "../wheels/flash_attn-2.8.3-cp310-cp310-linux_x86_64.whl" }
