[project]
name = "experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "transformers==4.51.3",
    "flash-attn~=2.8.3 ; sys_platform == 'linux'",
    "peft>=0.18.1",
    "jaxtyping>=0.3.7",
    "datasets>=4.8.4",
    "huggingface-hub>=0.32.0,<1.0",
    "flask>=3.1.3",
    "marshmallow>=4.3.0",
    "click>=8.3.2",
    "rouge-score>=0.1.2",
    "llmlingua>=0.2.2",
    "bitsandbytes>=0.49.2",
    "tensorboardx>=2.6.5",
    "wandb>=0.25.1",
]

[tool.uv.sources]
flash-attn = [
    { path = "../wheels/flash_attn-2.8.3-cp310-cp310-linux_x86_64.whl", marker = "sys_platform == 'linux'" },
]
