[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "ipykernel>=7.2.0",
    "jupyter-client>=8.8.0",
    "omegaconf>=2.3.0",
    "pandas>=3.0.2",
    "peft>=0.19.1",
    "pyzmq>=27.1.0",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
    "torch>=2.6.0",
    "transformers==4.57.1",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }